syntax = "proto3";

option go_package = "./ticketinterfaces";

message Ticket {
  string IssueKey = 1;
  string TargetContact = 2;
  string CreationDate = 3;
  string Status = 4;
  string TargetResource = 5;
  string RecommenderID = 6;
  string LastUpdateDate = 7;
  string LastPingDate = 8;
  string SnoozeDate = 9;
  string Subject = 10;
  repeated string Assignee = 11;
  bool UserRecommendation = 12;
}

